--- a/layout/footer.htm
+++ b/layout/footer.htm
@@ -1,5 +1,7 @@
- <footer class="bg-white sticky-footer">
+ <HTML>
+<footer class="bg-white sticky-footer">
                 <div class="container my-auto">
                     <div class="text-center my-auto copyright"><span>Copyright © SDESKTOP 2020</span></div>
                 </div>
             </footer>
+ </HTML>
